<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/HeaderBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ActionBarPopupThemeOverlay"
        app:theme="@style/ActionBarThemeOverlay" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginTop="68dp"
        android:fontFamily="cursive"
        android:text="@string/weather"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/weather" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/temperature"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/humidity"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="@string/temperature" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="@string/humidity"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:text="@string/humidity" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.294"
        tools:text="@string/speed" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/w1"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        tools:text="@string/w1" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:alpha="1"
        android:fontFamily="cursive"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</android.support.constraint.ConstraintLayout>

    <!--<android.support.v4.widget.DrawerLayout-->
        <!--android:id="@+id/drawer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--tools:context=".MainActivity"-->
        <!--tools:layout_editor_absoluteY="137dp">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

        <!--<android.support.design.widget.NavigationView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@android:color/holo_blue_light"-->
            <!--android:layout_gravity="start"-->
            <!--&gt;-->


            <!--<ScrollView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1030dp"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<ListView-->
                        <!--android:id="@+id/listview"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="750dp"-->
                        <!--android:background="@android:color/transparent"-->
                        <!--android:scrollbars="horizontal" />-->
                <!--</LinearLayout>-->
            <!--</ScrollView>-->

        <!--</android.support.design.widget.NavigationView>-->

    <!--</android.support.v4.widget.DrawerLayout>-->
